tests/error/enum_declared.gw
int i;
enum
{
  test
} i;
